Salesforce/main/default/objects/SAP_environment_variables__mdt/SAP_environment_variables__mdt.object-meta.xml
<CustomObject>
    <label>SAP_environment_variables</label>
    <pluralLabel>SAP_environment_variables</pluralLabel>
</CustomObject>