Salesforce/main/default/objects/SAP_environment_variables__mdt/fields/DocHeader_BusAct__c.field-meta.xml
<CustomField>
    <fullName>DocHeader_BusAct__c</fullName>
    <label>DocHeader_BusAct</label>
    <length>255</length>
    <type>Text</type>
</CustomField>