Salesforce/main/default/objects/SAP_environment_variables__mdt/fields/DocHeader_CompCode__c.field-meta.xml
<CustomField>
    <fullName>DocHeader_CompCode__c</fullName>
    <label>DocHeader_CompCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>