Salesforce/main/default/objects/SAP_environment_variables__mdt/fields/DocHeader_Currency_x_item0_Currency_x__c.field-meta.xml
<CustomField>
    <fullName>DocHeader_Currency_x_item0_Currency_x__c</fullName>
    <label>DocHeader_Currency_x_item0_Currency_x</label>
    <length>255</length>
    <type>Text</type>
</CustomField>