Salesforce/main/default/objects/SAP_environment_variables__mdt/fields/DocHeader_DocType__c.field-meta.xml
<CustomField>
    <fullName>DocHeader_DocType__c</fullName>
    <label>DocHeader_DocType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>