Salesforce/main/default/objects/SAP_environment_variables__mdt/fields/DocHeader_Item_item0_GlAccount__c.field-meta.xml
<CustomField>
    <fullName>DocHeader_Item_item0_GlAccount__c</fullName>
    <label>DocHeader_Item_item0_GlAccount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>