Salesforce/main/default/objects/SAP_environment_variables__mdt/fields/DocHeader_Receivable_item0_AllocNmbr__c.field-meta.xml
<CustomField>
    <fullName>DocHeader_Receivable_item0_AllocNmbr__c</fullName>
    <label>DocHeader_Receivable_item0_AllocNmbr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>