Salesforce/main/default/objects/SAP_environment_variables__mdt/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <label>Target</label>
    <type>TextArea</type>
</CustomField>